media/css/freenodejobs.css.d/20_features.css.d/f_base.scss
.f_base {
  nav.navbar {
    background-color: #292f2f !important;

    .navbar-brand {
      color: #ecf7fa;
      letter-spacing: -1px;
    }

    a.nav-link {
      color: #ecf7fa !important;
    }
  }

  header {
    margin-top: 12px;
    margin-bottom: 40px;

    .warning {
      color: white;
      padding: 8px;
      margin-top: 18px;
      background-color: #7f26a8;
    }
  }

  .titlex {
    margin-top: 72px;
    background: #3a4346 !important;
  }

  .alerts {
    margin-top: -30px;
  }

  section {
    .detail {
      h3 {
        font-size: 1.2rem;
      }
      ul, ol {
        li {
          color: #666;
          font-size: 0.9rem;
          margin-bottom: 0.4rem;
        }
      }
    }
  }

  footer {
    background-color: #292f2f !important;
  }
}

